basically finished could have a couple of further tweaks

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad's By Dan - About me</title>
+    <title>Ads By Dan - About me</title>
     <link rel="stylesheet" href="../styles/pages/about.css">
     <!-- using goolge fonts throughout -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body> 
+    <!-- this is a component -->
     <!-- using semantic header -->
     <header>
         <div class="header-div">
@@ -24,6 +25,7 @@
             </a>
            </div>
            <!-- using semantic nav, the links link to each page -->
+           <!-- this is a component -->
            <nav>
                <a href="../Pages/about.html">About</a>
                <a href="../Pages/contact.html">Contact</a>
@@ -31,7 +33,9 @@
         </div>
     </header>
     <!-- semantic -->
+
     <section>
+        <!-- this is a component -->
         <div class="headline-div">
             <div class="line-one"><h1>ABOUT</h1></div>
             <div class="line-two"><h1>ME</h1></div>
@@ -62,6 +66,7 @@
     </section>
 
     <!-- semantic -->
+    <!-- this is a component -->
     <footer>
         <div class="footer-div">
             <!-- this takes you home -->
