--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -42,9 +42,13 @@
         <div class="form-div">
             <div class="line"></div>
             <div class="form-content">
-                <h3>
-                    Get in touch!
-                </h3>
+                <div class="contact-details">
+                    <h3>
+                        Get in touch!
+                    </h3>
+                    <p>Call me: 0413 000 000</p>
+                    <p>Email me: dan@devcreative.com</p>
+                </div>
                 <!-- this has been set up to link with javascript in the future -->
                 <form class="form-content-div">
                     <!-- each input is designed to have a question and then an example of what the user should type in the input box -->
