--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <!-- using semantic header -->
     <header>
+        <!-- this is a component -->
         <div class="header-div">
             <div class="logo">
                 <!-- logo links home -->
@@ -36,15 +37,17 @@
     
     <!-- semantic -->
     <section>
+        <!-- this is a component -->
         <div class="headline-div">
             <!-- I want one to sit to the left and two to sit to the right -->
             <div class="line-one"><h1>I'M DAN,</h1></div>
-            <div class="line-two"><h1>A CREATIVE</h1></div>
+            <div class="line-two"><h1>CREATIVE DEV</h1></div>
         </div>
 
         <img class="hero-img" src="./img/home-photo.jpg" alt="Daniel Craig">
 
         <div class="info-div">
+            <!-- this is a component -->
             <div class="line"></div>
             <!-- i will use CSS to control the order of these elements for different screen sizes -->
             <div class="info-content">
@@ -52,6 +55,7 @@
                     Welcome, I'm delighted to make your acquaintance.<br> <br>Thanks for visiting.
                     So, what's my gig? I help brands create amazing moments. I've always been fuelled by that 'Eureka!' moment, driving projects until they see the light of day, and people are using them.
                     Hailing from the world's most isolated city, Perth, I've honed a wide array of skills – from TikTok to persuasive pitching, sound design to 3D animation, and UI/UX design. I use this arsenal to persuade brands to take the plunge.<br><br>
+                    I’m currently studying to be a full stack developer, hoping to bring even more digital skills allowing me to bring range of creative tech skills to the table.<br><br>
                     Take a dive into my site and explore more!
                 </p>
                 <h3>
@@ -61,57 +65,72 @@
         </div>
         <!-- ive used a grid to control the size and keep each third even -->
         <div class="card">
+            <!-- this is a component -->
             <div class="line"></div>
             <!-- the card link also helps with the hover -->
             <a class="card-link" href="./Pages/bp1.html">
                 <div class="card-grid">
                     <div class="grid-item"><h3>AMEX x UNIVERSAL MUSIC</h3></div>
                     <div class="grid-item"><img class="card-image" src="./img/AMEX-SQR-2.png" alt="American express billboard"></div>
-                    <div class="grid-item"><p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p></div>
+                    <div class="grid-item">
+                        <p><em><strong>Published 14/11/23</strong></em><br>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p>
+                    </div>
                 </div>
             </a>
         </div>
 
         <div class="card">
+            <!-- this is a component -->
             <div class="line"></div>
             <a class="card-link" href="./Pages/bp2.html">
                 <div class="card-grid">
                     <div class="grid-item"><h3>BWS COOL ROOM</h3></div>
                     <div class="grid-item"><img class="card-image" src="./img/BWS-SQR-3.png" alt="BWS Ad"></div>
-                    <div class="grid-item"><p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p></div>
+                    <div class="grid-item">
+                        <p><em><strong>Published 14/11/23</strong></em><br>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p>
+                    </div>
                 </div>
             </a>
         </div>
 
         <div class="card">
+            <!-- this is a component -->
             <div class="line"></div>
             <a class="card-link" href="./Pages/bp3.html">
                 <div class="card-grid">
                     <div class="grid-item"><h3>WILD TURKEY VINYL</h3></div>
                     <div class="grid-item"><img class="card-image" src="./img/WT-SQR-3.png" alt="Wild Turkey vinyl"></div>
-                    <div class="grid-item"><p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p></div>
+                    <div class="grid-item">
+                        <p><em><strong>Published 14/11/23</strong></em><br>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p>
+                    </div>
                 </div>
             </a>
         </div>
 
         <div class="card">
+            <!-- this is a component -->
             <div class="line"></div>
             <a class="card-link" href="./Pages/bp4.html">
                 <div class="card-grid">
                     <div class="grid-item"><h3>PAYTO LAUNCH</h3></div>
                     <div class="grid-item"><img class="card-image" src="./img/PAYTO-SQR-1.png" alt="Payto mobile ad"></div>
-                    <div class="grid-item"><p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p></div>
+                    <div class="grid-item">
+                        <p><em><strong>Published 14/11/23</strong></em><br>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p>
+                    </div>
                 </div>
             </a>
         </div>
 
         <div class="card">
+            <!-- this is a component -->
             <div class="line"></div>
             <a class="card-link" href="./Pages/bp5.html">
                 <div class="card-grid">
                     <div class="grid-item"><h3>WINDOWS XP 2023</h3></div>
                     <div class="grid-item"><img class="card-image" src="./img/WIN-REC-2.png" alt="Windows computer background"></div>
-                    <div class="grid-item"><p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p></div>
+                    <div class="grid-item">
+                        <p><em><strong>Published 14/11/23</strong></em><br>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit.</p>
+                    </div>
                 </div>
             </a>
         </div>
@@ -119,6 +138,7 @@
     </section>
     <!-- semantic -->
     <footer>
+        <!-- this is a component -->
         <div class="footer-div">
             <!-- this takes you home -->
             <!-- svg makes it easier to control in css and higher detail -->
@@ -131,6 +151,7 @@
             </div>  
             
             <div class="social">
+                <!-- this is a component -->
                 <!-- used the font awseome link from the class -->
                 <a href="https://github.com/14947"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/daniel-craig-5a0340166/"><i class="fa-brands fa-linkedin"></i></a>
