making final changes - will do last check tomorrow

--- a/Pages/bp1.html
+++ b/Pages/bp1.html
@@ -16,6 +16,7 @@
 <body>
     <!-- using semantic header -->
     <header>
+        <!-- this is a component -->
         <div class="header-div">
             <div class="logo">
                 <!-- logo links home -->
@@ -27,6 +28,7 @@
            </div>
            <!-- using semantic nav, the links link to each page -->
            <nav>
+                <!-- this is a component -->    
                <a href="../Pages/about.html">About</a>
                <a href="../Pages/contact.html">Contact</a>
            </nav>
@@ -34,6 +36,7 @@
     </header>
     <!-- semantic -->
     <section>
+        <!-- this is a component -->
         <div class="headline-div">
             <div class="line-one"><h1>AMEX X UMUSIC</h1></div>
             <div class="line-two"><h1>AT SXSW</h1></div>
@@ -43,25 +46,30 @@
 
         <!-- this info will be re used across the blog pages as placeholder -->
         <div class="info-div">
+            <!-- this is a component -->
             <div class="line"></div>
             <div class="info-content">
                 <p>
                     <em><strong>Published 14/11/23</strong></em><br>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. In iaculis arcu eros, eget tempus orci facilisis id. Praesent lorem orci, mattis non efficitur id, ultricies vel nibh. Sed volutpat lacus vitae gravida viverra. Fusce vel tempor elit. Proin tempus, magna id scelerisque vestibulum, nulla ex pharetra sapien, tempor posuere massa neque nec felis. Aliquam sem ipsum, vehicula ac tortor vel, egestas ullamcorper dui. Curabitur at risus sodales, tristique est id, euismod justo. Mauris nec leo non libero sodales lobortis. Quisque a neque pretium, dictum tellus vitae, euismod neque. Nulla facilisi. Phasellus ultricies dignissim nibh ut cursus. Nam et quam sit amet turpis finibus maximus tempor eget augue. Aenean at ultricies lorem. Sed egestas ligula tortor, sit amet mattis ex feugiat non. Duis purus diam, dictum et ante at, commodo iaculis urna. Aenean lacinia, nisl id vehicula condimentum, enim massa.
+                    I've recently been working on a massive project for American Express and Universal Music. Both companise teamed up to host a big industry event at Sydneys first SXSW. <br>
+                    The event lasted for three days, it hosted talks and acts. We needed to show the premium aspect of AMEX as well as the broad range of talent at Universal Music.
                 </p>
                 <h3>
-                    Lorem ipsum dolor.
+                    The event was a big hit!
                 </h3>
             </div>
         </div>
 
         <div class="info-div">
+            <!-- this is a component -->
             <div class="info-content">
                 <h3>
-                    Lorem ipsum dolor.
+                    Sydney was painted in ads
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet. Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel euismod erat placerat. In iaculis arcu eros, eget tempus orci facilisis id. Praesent lorem orci, mattis non efficitur id, ultricies vel nibh. Sed volutpat lacus vitae gravida viverra. Fusce vel tempor elit. Proin tempus, magna id scelerisque vestibulum, nulla ex pharetra sapien, tempor posuere massa neque nec felis. Aliquam sem ipsum, vehicula ac tortor vel, egestas ullamcorper dui. Curabitur at risus sodales, tristique est id, euismod justo. Mauris nec leo non libero sodales lobortis. Quisque a neque pretium, dictum tellus vitae, euismod neque. Nulla facilisi. Phasellus ultricies dignissim nibh ut cursus. Nam et quam sit amet turpis finibus maximus tempor eget augue. Aenean at ultricies lorem. Sed egestas ligula tortor, sit amet mattis ex feugiat non. Duis purus diam, dictum et ante at, commodo iaculis urna. Aenean lacinia, nisl id vehicula condimentum, enim massa.
+                    The campaign needed to highlight all of the acts in a new an excting way as well as get a range of people to come and see the show. <br>
+                    The show had a range of different genres as well as two brand directions - one representing the night shows and another representing the day time conference. <br>
+                    Overall the venue was packed throughout the three days leaving both American express and Universal Music happy stoked with the results.
                 </p>
             </div>
             <!-- image needs to span the width across all screen types -->
@@ -71,9 +79,11 @@
     </section>
     <!-- semantic -->
     <footer>
+        <!-- this is a component -->
         <div class="footer-div">
             <!-- this takes you home -->
             <div class="footer-home">
+                
                 <a href="../index.html">
                     <!-- svg makes it easier to control in css and higher detail -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="256" height="30" viewBox="0 0 256 30" fill="none">
@@ -82,6 +92,7 @@
                 </a>
             </div> 
             <div class="social">
+                <!-- this is a component -->
                 <!-- used the font awseome link from the class -->
                 <a href="https://github.com/14947"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/daniel-craig-5a0340166/"><i class="fa-brands fa-linkedin"></i></a>
