--- a/Pages/bp3.html
+++ b/Pages/bp3.html
@@ -15,6 +15,7 @@
 <body>
     <!-- using semantic header -->
     <header>
+        <!-- this is a component -->
         <div class="header-div">
             <div class="logo">
                 <!-- logo links home -->
@@ -33,6 +34,7 @@
     </header>
 
     <section>
+        <!-- this is a component -->
         <div class="headline-div">
             <div class="line-one"><h1>WILD</h1></div>
             <div class="line-two"><h1>TURKEY VINYL</h1></div>
@@ -42,6 +44,7 @@
 
         <div class="line"></div>
         <div class="info-div">
+            <!-- this is a component -->
             <div class="info-content">
                 <p>
                     <em><strong>Published 14/11/23</strong></em><br>
@@ -54,6 +57,7 @@
         </div>
 
         <div class="info-div">
+            <!-- this is a component -->
             <div class="info-content">
                 <h3>
                     Lorem ipsum dolor.
@@ -71,6 +75,7 @@
     <footer>
         <div class="footer-div">
             <!-- this takes you home -->
+            <!-- this is a component -->
             <!-- svg makes it easier to control in css and higher detail -->
             <div class="footer-home">
                 <a href="../index.html">
