--- a/Pages/bp5.html
+++ b/Pages/bp5.html
@@ -15,6 +15,7 @@
 <body>
     <!-- using semantic header -->
     <header>
+        <!-- this is a component -->
         <div class="header-div">
             <div class="logo">
                 <!-- logo links home -->
@@ -26,6 +27,7 @@
             </div>
            <!-- using semantic nav, the links link to each page -->
            <nav>
+                <!-- this is a component -->
                <a href="../Pages/about.html">About</a>
                <a href="../Pages/contact.html">Contact</a>
            </nav>
@@ -33,6 +35,7 @@
     </header>
 
     <section>
+        <!-- this is a component -->
         <div class="headline-div">
             <div class="line-one"><h1>PAYTO</h1></div>
             <div class="line-two"><h1>LAUNCH</h1></div>
@@ -42,6 +45,7 @@
 
         <div class="line"></div>
         <div class="info-div">
+            <!-- this is a component -->
             <div class="info-content">
                 <p>
                     <em><strong>Published 14/11/23</strong></em><br>
@@ -54,6 +58,7 @@
         </div>
 
         <div class="info-div">
+            <!-- this is a component -->
             <div class="info-content">
                 <h3>
                     Lorem ipsum dolor.
@@ -69,6 +74,7 @@
     </section>
 
     <footer>
+        <!-- this is a component -->
         <div class="footer-div">
             <!-- this takes you home -->
             <!-- svg makes it easier to control in css and higher detail -->
