--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad's By Dan - Contact me</title>
+    <title>Ads By Dan - Contact me</title>
     <link rel="stylesheet" href="../styles/pages/contact.css">
     <!-- using goolge fonts throughout -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,7 @@
 <body>
     <!-- using semantic header -->
     <header>
+        <!-- this is a component -->
         <div class="header-div">
             <div class="logo">
                 <!-- logo links home -->
@@ -25,13 +26,15 @@
            </div>
            <!-- using semantic nav, the links link to each page -->
            <nav>
+                <!-- this is a component -->
                <a href="../Pages/about.html">About</a>
                <a href="../Pages/contact.html">Contact</a>
            </nav>
         </div>
     </header>
-
+    <!-- this is a component -->
     <section>
+        <!-- this is a component -->
         <div class="headline-div">
             <div class="line-one"><h1>CONTACT</h1></div>
             <div class="line-two"><h1>ME</h1></div>
@@ -40,6 +43,7 @@
         <img class="hero-img" src="../img/contact-me.png" alt="portait">
 
         <div class="form-div">
+            <!-- this is a component -->
             <div class="line"></div>
             <div class="form-content">
                 <div class="contact-details">
@@ -85,6 +89,7 @@
                 </a>
             </div> 
             <div class="social">
+                <!-- this is a component -->
                 <!-- used the font awseome link from the class -->
                 <a href="https://github.com/14947"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/daniel-craig-5a0340166/"><i class="fa-brands fa-linkedin"></i></i></a>
