--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad's By Dan - home</title>
+    <title>Ads By Dan - home</title>
     <link rel="stylesheet" href="./styles/pages/home.css">
     <!-- using goolge fonts throughout -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
