--- a/Pages/bp1.html
+++ b/Pages/bp1.html
@@ -44,38 +44,40 @@
 
         <img class="hero-img" src="../img/AMEX-SQR-2.png" alt="amex ad">
 
-        <!-- this info will be re used across the blog pages as placeholder -->
-        <div class="info-div">
-            <!-- this is a component -->
-            <div class="line"></div>
-            <div class="info-content">
-                <p>
-                    <em><strong>Published 14/11/23</strong></em><br>
-                    I've recently been working on a massive project for American Express and Universal Music. Both companise teamed up to host a big industry event at Sydneys first SXSW. <br>
-                    The event lasted for three days, it hosted talks and acts. We needed to show the premium aspect of AMEX as well as the broad range of talent at Universal Music.
-                </p>
-                <h3>
-                    The event was a big hit!
-                </h3>
+        <article>
+            <!-- this info will be re used across the blog pages as placeholder -->
+            <div class="info-div">
+                <!-- this is a component -->
+                <div class="line"></div>
+                <div class="info-content">
+                    <p>
+                        <em><strong>Published 14/11/23</strong></em><br>
+                        I've recently been working on a massive project for American Express and Universal Music. Both companise teamed up to host a big industry event at Sydneys first SXSW. <br>
+                        The event lasted for three days, it hosted talks and acts. We needed to show the premium aspect of AMEX as well as the broad range of talent at Universal Music.
+                    </p>
+                    <h3>
+                        The event was a big hit!
+                    </h3>
+                </div>
             </div>
-        </div>
 
-        <div class="info-div">
-            <!-- this is a component -->
-            <div class="info-content">
-                <h3>
-                    Sydney was painted in ads
-                </h3>
-                <p>
-                    The campaign needed to highlight all of the acts in a new an excting way as well as get a range of people to come and see the show. <br>
-                    The show had a range of different genres as well as two brand directions - one representing the night shows and another representing the day time conference. <br>
-                    Overall the venue was packed throughout the three days leaving both American express and Universal Music happy stoked with the results.
-                </p>
+            <div class="info-div">
+                <!-- this is a component -->
+                <div class="info-content">
+                    <h3>
+                        Sydney was painted in ads
+                    </h3>
+                    <p>
+                        The campaign needed to highlight all of the acts in a new an excting way as well as get a range of people to come and see the show. <br>
+                        The show had a range of different genres as well as two brand directions - one representing the night shows and another representing the day time conference. <br>
+                        Overall the venue was packed throughout the three days leaving both American express and Universal Music happy stoked with the results.
+                    </p>
+                </div>
+                <!-- image needs to span the width across all screen types -->
+                <img class="image-wide" src="../img/AMEX-REC-1.png" alt="billboard - newtown station">
             </div>
-            <!-- image needs to span the width across all screen types -->
-            <img class="image-wide" src="../img/AMEX-REC-1.png" alt="billboard - newtown station">
-        </div>
-
+        </article>
+        
     </section>
     <!-- semantic -->
     <footer>
